[package]
name = "aws-timestream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.107"
aws-sdk-timestreamwrite = "0.7.0"
aws-config = "0.57.1"
aws-types = "0.57.1"
chrono = { version = "0.4.31", features = ["serde"] }
aws-sdk-timestreamquery = "0.7.0"
aws-sdk-apigateway = "0.35.0"
clap = { version = "~4.4", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.20.1", features = ["full"] }
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
dotenv = "0.15"
reqwest = "0.11"
# crypto = "0.5.1"
ring = "0.17.5"
hex = "0.4.3"
